# udmover

./: .coveragerc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
etc/udmover/: udmover.conf.sample
src/udmover/: skeleton.py  udmover.py
tests/: conftest.py  test_skeleton.py  unit_tests.py
udmover/: __init__.py  cmdparser.py  udmover.py
udmover/cli/: cmd.py  cmdparser.py  config.py  msg.py  utils.py
udmover/storage/webdav/: client.py  connection.py  exceptions.py  urn.py
