# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = udmover
description = User Data Mover
author = Mario David
author-email = mariojmdavid@gmail.com
license = apache
url = https://github.com/mariojmdavid/udmover/
long-description = file: README.rst
platforms = Linux
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
