# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = udmover
description = User Data Mover
author = Mario David
author-email = mariojmdavid@gmail.com
license = Apache-2
url = https://github.com/mariojmdavid/udmover/
long-description = file: README.rst
platforms = Linux
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[files]
packages =
    udmover

#data_files =
#    etc/udm/ = etc/udm/*

#[entry_points]
#console_scripts =
#    udmover = udmover.udmover:main
